[gd_scene load_steps=32 format=3 uid="uid://m6pypgl566n1"]

[ext_resource type="Script" path="res://player/player.gd" id="1_ref5g"]
[ext_resource type="Script" path="res://player/smooth_camera.gd" id="2_cywkd"]
[ext_resource type="Script" path="res://scripts/state_machine/state_machine.gd" id="2_g0cef"]
[ext_resource type="Script" path="res://scripts/state_machine/states/idle.gd" id="3_4b8lt"]
[ext_resource type="Script" path="res://player/crosshair.gd" id="3_282xj"]
[ext_resource type="Script" path="res://scripts/state_machine/states/walk.gd" id="4_gw7tn"]
[ext_resource type="PackedScene" uid="uid://w0ax75odo1ha" path="res://components/health.tscn" id="5_acel2"]
[ext_resource type="Script" path="res://scripts/state_machine/states/walker.gd" id="5_h6v2u"]
[ext_resource type="Texture2D" uid="uid://di7tj31llxo0i" path="res://player/damage.png" id="6_km1pl"]
[ext_resource type="Script" path="res://scripts/state_machine/states/aim.gd" id="6_rtwvu"]
[ext_resource type="Script" path="res://scripts/state_machine/states/prepare_gun.gd" id="7_hfrgh"]
[ext_resource type="PackedScene" uid="uid://bjq2dkpgpnav7" path="res://player/game_over_menu.tscn" id="7_keanm"]
[ext_resource type="Script" path="res://scripts/state_machine/states/Unbalanced.gd" id="8_7b01x"]
[ext_resource type="FontFile" uid="uid://yqk87iw0ykxp" path="res://assets/fonts/Roboto-Regular.ttf" id="8_dofuu"]
[ext_resource type="Shape3D" uid="uid://dwk5imwjcfs06" path="res://player/player_walker_collision_shape.tres" id="9_2r1e7"]
[ext_resource type="Script" path="res://scripts/state_machine/states/Downed.gd" id="9_q33c7"]
[ext_resource type="PackedScene" uid="uid://shutxn8dpbys" path="res://player/balance.tscn" id="10_m7euy"]
[ext_resource type="Script" path="res://player/walker.gd" id="15_hi5sq"]
[ext_resource type="Script" path="res://components/interactable.gd" id="16_wvci1"]

[sub_resource type="CylinderMesh" id="CylinderMesh_qj4cq"]
top_radius = 0.02
bottom_radius = 0.02
height = 0.2

[sub_resource type="CapsuleMesh" id="CapsuleMesh_fyred"]

[sub_resource type="Animation" id="Animation_yibg3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_2b66e"]
resource_name = "TakeDamage"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xp5da"]
_data = {
"RESET": SubResource("Animation_yibg3"),
"TakeDamage": SubResource("Animation_2b66e")
}

[sub_resource type="LabelSettings" id="LabelSettings_cswfq"]
font = ExtResource("8_dofuu")
font_size = 64

[sub_resource type="BoxMesh" id="BoxMesh_2ns6k"]
size = Vector3(0.6, 0.6, 0.6)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_qnmhc"]
data = PackedVector3Array(-0.3, 0.3, 0.3, 0.3, 0.3, 0.3, -0.3, -0.3, 0.3, 0.3, 0.3, 0.3, 0.3, -0.3, 0.3, -0.3, -0.3, 0.3, 0.3, 0.3, -0.3, -0.3, 0.3, -0.3, 0.3, -0.3, -0.3, -0.3, 0.3, -0.3, -0.3, -0.3, -0.3, 0.3, -0.3, -0.3, 0.3, 0.3, 0.3, 0.3, 0.3, -0.3, 0.3, -0.3, 0.3, 0.3, 0.3, -0.3, 0.3, -0.3, -0.3, 0.3, -0.3, 0.3, -0.3, 0.3, -0.3, -0.3, 0.3, 0.3, -0.3, -0.3, -0.3, -0.3, 0.3, 0.3, -0.3, -0.3, 0.3, -0.3, -0.3, -0.3, 0.3, 0.3, 0.3, -0.3, 0.3, 0.3, 0.3, 0.3, -0.3, -0.3, 0.3, 0.3, -0.3, 0.3, -0.3, 0.3, 0.3, -0.3, -0.3, -0.3, 0.3, 0.3, -0.3, 0.3, -0.3, -0.3, -0.3, 0.3, -0.3, 0.3, 0.3, -0.3, -0.3, -0.3, -0.3, -0.3)

[sub_resource type="Animation" id="Animation_1ivek"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("CameraPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("AnimatedObjects/AnimatedGun:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedObjects/AnimatedGun:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -2.34067e-07, 1.65806)]
}

[sub_resource type="Animation" id="Animation_dutym"]
resource_name = "prepare_gun"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraPivot:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-1.0472, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("AnimatedObjects/AnimatedGun:visible")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedObjects/AnimatedGun:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6, 1.5, 1.7, 2.4),
"transitions": PackedFloat32Array(0.5, 0.5, 2, 2),
"update": 0,
"values": [Vector3(0, -2.34067e-07, 1.65806), Vector3(3.14159, 0, 1.65806), Vector3(3.14159, 0, 1.65806), Vector3(0, 0, 1.16866)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1d5hg"]
_data = {
"RESET": SubResource("Animation_1ivek"),
"prepare_gun": SubResource("Animation_dutym")
}

[sub_resource type="CylinderMesh" id="CylinderMesh_pr3u4"]
top_radius = 0.02
bottom_radius = 0.02
height = 0.2

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 4
collision_mask = 3
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_ref5g")
speed = 0.3

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="WeaponCamera" type="Camera3D" parent="SubViewportContainer/SubViewport"]
cull_mask = 2
fov = 33.0

[node name="AimingGun" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/WeaponCamera"]
transform = Transform3D(1, 0, 0, 0, 0.231748, 0.972776, 0, -0.972776, 0.231748, 0, -0.055, -0.338)
visible = false
layers = 2
mesh = SubResource("CylinderMesh_qj4cq")
skeleton = NodePath("../../../../AnimatedObjects")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_g0cef")
initial_state = NodePath("Walker")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_4b8lt")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("4_gw7tn")

[node name="Walker" type="Node" parent="StateMachine"]
script = ExtResource("5_h6v2u")
speed = 0.4

[node name="Aim" type="Node" parent="StateMachine"]
script = ExtResource("6_rtwvu")
aim_multiplier = 0.1

[node name="SensibilityTimer" type="Timer" parent="StateMachine/Aim"]
wait_time = 0.5
autostart = true

[node name="PrepareGun" type="Node" parent="StateMachine"]
script = ExtResource("7_hfrgh")

[node name="Unbalanced" type="Node" parent="StateMachine"]
script = ExtResource("8_7b01x")
time_to_keep_balance = 7.0
necessary_keys_to_press = 12
margin_of_error = 3.0
difficulty_increase = 0.6

[node name="Timer" type="Timer" parent="StateMachine/Unbalanced"]
one_shot = true

[node name="BalancedUI" type="Control" parent="StateMachine/Unbalanced"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlaceholderLAble" type="Label" parent="StateMachine/Unbalanced/BalancedUI"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -225.0
offset_top = -76.49
offset_right = 226.0
offset_bottom = -32.49
grow_horizontal = 2
grow_vertical = 0

[node name="ErrorTimer" type="Timer" parent="StateMachine/Unbalanced"]
one_shot = true

[node name="Downed" type="Node" parent="StateMachine"]
script = ExtResource("9_q33c7")
necessary_keys_to_press = 20

[node name="BalancedUI" type="Control" parent="StateMachine/Downed"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlaceholderLAble" type="Label" parent="StateMachine/Downed/BalancedUI"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -225.0
offset_top = -76.49
offset_right = 226.0
offset_bottom = -32.49
grow_horizontal = 2
grow_vertical = 0

[node name="PlayerCapsule" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_fyred")

[node name="Components" type="Node" parent="."]

[node name="Health" parent="Components" instance=ExtResource("5_acel2")]
max_health = 50

[node name="Balance" parent="Components" instance=ExtResource("10_m7euy")]
shooting_cost = 200
getting_hit_cost = 500
balance_recovery = 45
bonus_balance_recovery = 75

[node name="PlayerCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.355084)
shape = ExtResource("9_2r1e7")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.499998, 0.866027, 0, -0.866027, 0.499998, 0, 0.3, 0)

[node name="WorldCamera" type="Camera3D" parent="CameraPivot"]
top_level = true
cull_mask = 1048573
fov = 33.0
script = ExtResource("2_cywkd")
speed = 20.0

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="CameraPivot/WorldCamera"]
remote_path = NodePath("../../../SubViewportContainer/SubViewport/WeaponCamera")

[node name="AimShakeTimer" type="Timer" parent="CameraPivot/WorldCamera"]
wait_time = 0.297
autostart = true

[node name="InteractableRay" type="RayCast3D" parent="CameraPivot/WorldCamera"]
target_position = Vector3(0, 0, -2)
collision_mask = 15
debug_shape_custom_color = Color(0.756863, 0.00392157, 0.941176, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Control" type="Control" parent="CenterContainer"]
layout_mode = 2
script = ExtResource("3_282xj")

[node name="DamageTexture" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(576, 324)
mouse_filter = 2
texture = ExtResource("6_km1pl")

[node name="DamageAnimationPlayer" type="AnimationPlayer" parent="DamageTexture"]
libraries = {
"": SubResource("AnimationLibrary_xp5da")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="StateLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
label_settings = SubResource("LabelSettings_cswfq")

[node name="GameOverMenu" parent="." instance=ExtResource("7_keanm")]
visible = false

[node name="WalkerFixedPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.706177, -0.981278)

[node name="Walker" type="MeshInstance3D" parent="WalkerFixedPoint"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0294226, -0.0214159)
layers = 2
mesh = SubResource("BoxMesh_2ns6k")
skeleton = NodePath("../..")
script = ExtResource("15_hi5sq")

[node name="StaticBody3D" type="StaticBody3D" parent="WalkerFixedPoint/Walker"]
constant_linear_velocity = Vector3(0, -9, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="WalkerFixedPoint/Walker/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_qnmhc")

[node name="Interactable" type="Node" parent="WalkerFixedPoint/Walker/StaticBody3D"]
script = ExtResource("16_wvci1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1d5hg")
}

[node name="AnimatedObjects" type="Node3D" parent="."]

[node name="AnimatedGun" type="MeshInstance3D" parent="AnimatedObjects"]
transform = Transform3D(-0.0871529, -0.996195, -2.34067e-07, 0.996195, -0.0871529, 0, -2.03996e-08, -2.33176e-07, 1, 0, -0.160696, -0.166331)
visible = false
layers = 2
mesh = SubResource("CylinderMesh_pr3u4")
skeleton = NodePath("../../SubViewportContainer/SubViewport/WeaponCamera")

[connection signal="transitioned" from="StateMachine" to="Components/Balance" method="_on_state_machine_transitioned"]
[connection signal="timeout" from="StateMachine/Aim/SensibilityTimer" to="StateMachine/Aim" method="_on_sensibility_timer_timeout"]
[connection signal="timeout" from="StateMachine/Unbalanced/Timer" to="StateMachine/Unbalanced" method="_on_timer_timeout"]
[connection signal="timeout" from="StateMachine/Unbalanced/ErrorTimer" to="StateMachine/Unbalanced" method="_on_error_timer_timeout"]
[connection signal="health_minimun_reached" from="Components/Health" to="." method="_on_health_health_minimun_reached"]
[connection signal="taken_damage" from="Components/Health" to="." method="_on_health_taken_damage"]
[connection signal="timeout" from="CameraPivot/WorldCamera/AimShakeTimer" to="CameraPivot/WorldCamera" method="_on_aim_shake_timer_timeout"]
[connection signal="on_interact" from="WalkerFixedPoint/Walker/StaticBody3D/Interactable" to="." method="_on_interactable_on_interact"]
